--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "svix": "^1.84.1",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
+    "use-immer": "^0.11.0",
     "zod": "^4.3.6"
   },
   "devDependencies": {
